# genertive-ai-using-langchain

./: README.md  pyproject.toml  requirements.txt
02-langchain-prompts/: README.md
02-langchain-prompts/01-temperature/: temperature.py
02-langchain-prompts/02-static-and-dynamic-prompt/: 01-static-prompt-ui.py  02-dynamic-prompt-ui.py  03-prompt-generator.py  04-adv-dynamic-prompt-ui.py  attention-all-you-need.txt  bert.txt  template.json
02-langchain-prompts/03-chatbot/: 01-simple-chatbot.py
03-langchain-structured-output/: README.md
03-langchain-structured-output/01-type-dict/: 01-type-dict-demo.py  02-with-structured-output-typedict.py
03-langchain-structured-output/02-pydantic/: 01-pydantic.py  02-with-structured-output-pydantic.py
03-langchain-structured-output/03-json/: 01-json-schema.json  02-with-structured-output-json.py
